SET(TARGET_NAME "Plugin_Awesomium")

IF("${FLAVOR}" STREQUAL "win64")
SET(TARGET_DIR "./Bin64/Plugins/Awesomium")
ELSE()
SET(TARGET_DIR "./Bin32/Plugins/Awesomium")
ENDIF()

INCLUDE_DIRECTORIES(${AWESOMIUM_INC_DIR})
LINK_DIRECTORIES (${AWESOMIUM_LIB_DIR})

INCLUDE_DIRECTORIES(../../plugin_manager/include)
INCLUDE_DIRECTORIES(../../plugin_D3D/include)
INCLUDE_DIRECTORIES(../include)
INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../../cry_game/src/Core)
INCLUDE_DIRECTORIES(${CRY_DIR}/Code/CryEngine/CryCommon)
INCLUDE_DIRECTORIES(${CRY_DIR}/Code/CryEngine/CryAction)

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
# ADD_DEFINITIONS(-D_RELEASE)
# ADD_DEFINITIONS(-DPURE_CLIENT)
ADD_DEFINITIONS(-D_FORCEDLL)
# ADD_DEFINITIONS(-DUSER_kenshin)
# ADD_DEFINITIONS(-DEXCLUDE_CINEMIZER_SDK)
# ADD_DEFINITIONS(-DEXCLUDE_OCULUS_SDK)
# ADD_DEFINITIONS(-D_WINDLL)
# ADD_DEFINITIONS(-D_MBCS)

FILE(GLOB_RECURSE PUBLIC_HEADERS "*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp")

ADD_MSVC_PRECOMPILED_HEADER("StdAfx.h" "StdAfx.cpp" SOURCE_FILES)

#<AdditionalDependencies>netapi32.lib;Ws2_32.lib

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${AWESOMIUM_LIBS})

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

# COMPRESS_BINARY()
