SET(TARGET_NAME "cef_process")

IF("${FLAVOR}" STREQUAL "win64")
SET(TARGET_DIR "./Bin64")
ELSE()
SET(TARGET_DIR "./Bin32")
ENDIF()

INCLUDE_DIRECTORIES(${CEF_INC_DIR})
LINK_DIRECTORIES (${CEF_LIB_DIR})

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

FILE(GLOB_RECURSE PUBLIC_HEADERS "*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp")

ADD_EXECUTABLE (${TARGET_NAME} WIN32 ${PUBLIC_HEADERS} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${CEF_LIBS})

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})
