SET(TARGET_NAME "Plugin_CEF")

IF("${FLAVOR}" STREQUAL "win64")
SET(TARGET_DIR "./Bin64/Plugins/CEF")
ELSE()
SET(TARGET_DIR "./Bin32/Plugins/CEF")
ENDIF()

INCLUDE_DIRECTORIES(${CEF_INC_DIR})
LINK_DIRECTORIES(${CEF_LIB_DIR})

INCLUDE_DIRECTORIES(${DX_INC_DIR})
LINK_DIRECTORIES(${DX_LIB_DIR})

INCLUDE_DIRECTORIES(../../plugin_manager/include)
INCLUDE_DIRECTORIES(../../plugin_D3D/include)
INCLUDE_DIRECTORIES(../include)
INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../../cry_game/src/Core)
INCLUDE_DIRECTORIES(${CRY_DIR}/Code/CryEngine/CryCommon)
INCLUDE_DIRECTORIES(${CRY_DIR}/Code/CryEngine/CryAction)

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
# ADD_DEFINITIONS(-D_RELEASE)
# ADD_DEFINITIONS(-DPURE_CLIENT)
ADD_DEFINITIONS(-D_FORCEDLL)

FILE(GLOB_RECURSE PUBLIC_HEADERS "*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp")

ADD_MSVC_PRECOMPILED_HEADER("StdAfx.h" "StdAfx.cpp" SOURCE_FILES)

#<AdditionalDependencies>netapi32.lib;Ws2_32.lib
IF(MSVC)
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /NODEFAULTLIB:LIBCMT.lib")
ENDIF()
#/NODEFAULTLIB:msvcprt.lib

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${DX_LIBS} ${CEF_LIBS})

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

# COMPRESS_BINARY()
